syntax = "proto3";

option go_package = "cartify/catalogue/proto/book";

package book;

import "google/protobuf/empty.proto";

service Catalogue {
  rpc GetBook (GetBookRequest) returns (GetBookResponse) {}
  rpc ListBooks (google.protobuf.Empty) returns (ListBooksResponse) {}
}

message GetBookRequest {
  int32 id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message ListBooksResponse {
  repeated Book books = 1;
}

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  int32 price = 4;
}